<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_small"
            android:paddingTop="@dimen/margin_medium">

            <LinearLayout
                android:paddingEnd="@dimen/margin_medium"
                android:paddingStart="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/post_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textDirection="locale"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Post title" />

                <TextView
                    android:id="@+id/post_meta_date_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:maxLines="1"
                    android:textStyle="italic"
                    tools:text="12h ago by foo" />
            </LinearLayout>

            <ImageView
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:id="@+id/post_thumbnail"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_description_post_thumbnail" />
        </LinearLayout>

        <TextView
            android:padding="@dimen/margin_medium"
            android:id="@+id/post_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            tools:text="Post content" />
        <!-- Post meta-->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray" />

        <!-- Post action-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
            android:weightSum="6">

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/post_vote_up"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:contentDescription="@string/content_description_post_vote_up"
                    app:srcCompat="@drawable/ic_arrow_upward" />

                <TextView
                    android:id="@+id/post_score"
                    tools:text="334"
                    android:gravity="center"
                    android:paddingRight="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingStart="@dimen/margin_small"
                    android:paddingEnd="@dimen/margin_small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <ImageButton
                    android:id="@+id/post_vote_down"
                    android:layout_width="wrap_content"
                    android:background="#00000000"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description_post_vote_down"
                    app:srcCompat="@drawable/ic_arrow_downward" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingStart="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_small"
                    android:paddingEnd="@dimen/margin_small"
                    android:contentDescription="@string/content_description_favorite_post"
                    app:srcCompat="@drawable/ic_comment" />

                <TextView
                    android:id="@+id/post_num_comment"
                    tools:text="12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <ImageButton
                android:id="@+id/post_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="#00000000"
                android:contentDescription="@string/content_description_share"
                app:srcCompat="@drawable/ic_share" />

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>