<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.com.readit.ui.postDetail.PostDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Post-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <!-- Post title-->
            <TextView
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textDirection="locale"
                android:textStyle="bold"
                tools:text="Post title" />

            <TextView
                android:id="@+id/post_meta_date_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:maxLines="1"
                android:textStyle="italic"
                tools:text="12h ago by foo" />

            <!-- Post Image-->
            <ImageView
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_post_image"
                android:scaleType="fitCenter" />
            <!-- Post content text-->
            <TextView
                android:id="@+id/post_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                tools:text="Post content body" />

            <TextView
                android:id="@+id/post_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/colorPrimary"
                tools:text="post url" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray" />

        <!-- Post action-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
            android:weightSum="6">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/post_vote_up"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:contentDescription="@string/content_description_post_vote_up"
                    app:srcCompat="@drawable/ic_arrow_upward" />

                <TextView
                    android:id="@+id/post_score"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_small"
                    android:paddingEnd="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_small"
                    tools:text="334" />

                <ImageButton
                    android:id="@+id/post_vote_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:contentDescription="@string/content_description_post_vote_down"
                    app:srcCompat="@drawable/ic_arrow_downward" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:contentDescription="@string/content_description_favorite_post"
                    android:paddingRight="@dimen/margin_small"
                    android:paddingEnd="@dimen/margin_small"
                    android:paddingStart="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_small"
                    app:srcCompat="@drawable/ic_comment" />

                <TextView
                    android:id="@+id/post_num_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12" />
            </LinearLayout>


            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/content_description_share"
                app:srcCompat="@drawable/ic_share" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray" />

        <!-- Comments-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/post_comments_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="afterDescendants"
            android:padding="@dimen/margin_medium" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>